test/sema/positive/if08.impala
fn f() -> () {
    let x: int = if (true) {
        return()
    } else {
        5
    };
}
