test/sema/negative/struct01.impala
fn f() -> () {
   let s = S { x: 5 };
}
